fixed responsiveness on mobile index page

--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -15,15 +15,27 @@
   .index-container {
     margin: 10px 10px;
   }
-}
-.recipe-card-container {
-  display: flex;
-  flex-wrap: wrap;
-  margin: 0px 0px;
+  .recipe-card-container {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0px 0px;
+    width: 100%;
+    margin-left: -1%;
+  }
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
+    .index-container {
+    margin: 10px 10px;
+  }
+  .recipe-card-container {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0px 0px;
+    width: 100%;
+    margin-left: 0%;
+  }
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
@@ -31,8 +43,6 @@
   .index-container {
     margin: 20px 40px;
   }
-}
-
 .recipe-card-container {
   display: flex;
   flex-wrap: wrap;
@@ -40,7 +50,7 @@
   width: 80%;
   margin-left: 14%;
 }
-
+}
 
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
