--- a/app/assets/stylesheets/pages/_show_recipe.scss
+++ b/app/assets/stylesheets/pages/_show_recipe.scss
@@ -49,9 +49,6 @@ input.servings {
     margin: 10px 20px;
     margin-bottom: 45px;
   }
-  h3.recipe-ingredients{
-      margin-bottom: 40px;
-    }
 
   .recipe-show-banner{
     margin: 10px 20px;
@@ -67,9 +64,7 @@ input.servings {
   .recipe-ingredients{
     text-align: left;
   }
-  h3.recipe-ingredients{
-    margin-bottom: 40px;
-    }
+
   .recipe-base-container{
     margin-left: 10%;
     margin-right: 10%;
